--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,5 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+body {margin:0; padding:0; background: #ccc; font-family: "Arial", sans-serif;}
+#root {width:700px; padding:25px 50px; margin:auto; background: #fff;}
+form label {font-size:12px; margin-bottom:2px; display: block;}
+form input {padding:3px; font-size:12px;}
+form input[type="submit"] {background:#333; color:#fff; padding:5px 15px; cursor: pointer; border:none; font-weight: bold;}
